src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void PyRotationWarper_Delete(void* self);
extern "C" __declspec(dllexport) void* PyRotationWarper_New_0(const char* type, float scale);
extern "C" __declspec(dllexport) void* PyRotationWarper_New_1();
extern "C" __declspec(dllexport) cv::Point2f PyRotationWarper_warpPoint_0(void* self, cv::Point2f pt, void* K, void* R);
extern "C" __declspec(dllexport) cv::Point2f PyRotationWarper_warpPointBackward_0(void* self, cv::Point2f pt, void* K, void* R);
extern "C" __declspec(dllexport) cv::Rect PyRotationWarper_buildMaps_0(void* self, cv::Size src_size, void* K, void* R, void* xmap, void* ymap);
extern "C" __declspec(dllexport) cv::Point PyRotationWarper_warp_0(void* self, void* src, void* K, void* R, int interp_mode, int border_mode, void* dst);
extern "C" __declspec(dllexport) void PyRotationWarper_warpBackward_0(void* self, void* src, void* K, void* R, int interp_mode, int border_mode, cv::Size dst_size, void* dst);
extern "C" __declspec(dllexport) cv::Rect PyRotationWarper_warpRoi_0(void* self, cv::Size src_size, void* K, void* R);
extern "C" __declspec(dllexport) float PyRotationWarper_getScale_0(void* self);
extern "C" __declspec(dllexport) void PyRotationWarper_setScale_0(void* self, float arg1);
extern "C" __declspec(dllexport) void Stitcher_Delete(void* self);
extern "C" __declspec(dllexport) void* Stitcher_create_0(int mode);
extern "C" __declspec(dllexport) double Stitcher_registrationResol_0(void* self);
extern "C" __declspec(dllexport) void Stitcher_setRegistrationResol_0(void* self, double resol_mpx);
extern "C" __declspec(dllexport) double Stitcher_seamEstimationResol_0(void* self);
extern "C" __declspec(dllexport) void Stitcher_setSeamEstimationResol_0(void* self, double resol_mpx);
extern "C" __declspec(dllexport) double Stitcher_compositingResol_0(void* self);
extern "C" __declspec(dllexport) void Stitcher_setCompositingResol_0(void* self, double resol_mpx);
extern "C" __declspec(dllexport) double Stitcher_panoConfidenceThresh_0(void* self);
extern "C" __declspec(dllexport) void Stitcher_setPanoConfidenceThresh_0(void* self, double conf_thresh);
extern "C" __declspec(dllexport) bool Stitcher_waveCorrection_0(void* self);
extern "C" __declspec(dllexport) void Stitcher_setWaveCorrection_0(void* self, bool flag);
extern "C" __declspec(dllexport) int Stitcher_interpolationFlags_0(void* self);
extern "C" __declspec(dllexport) void Stitcher_setInterpolationFlags_0(void* self, int interp_flags);
extern "C" __declspec(dllexport) int Stitcher_estimateTransform_0(void* self, void* images, void* masks);
extern "C" __declspec(dllexport) int Stitcher_composePanorama_0(void* self, void* pano);
extern "C" __declspec(dllexport) int Stitcher_composePanorama_1(void* self, void* images, void* pano);
extern "C" __declspec(dllexport) int Stitcher_stitch_0(void* self, void* images, void* pano);
extern "C" __declspec(dllexport) int Stitcher_stitch_1(void* self, void* images, void* masks, void* pano);
extern "C" __declspec(dllexport) void* Stitcher_component_0(void* self);
extern "C" __declspec(dllexport) void* Stitcher_cameras_0(void* self);
extern "C" __declspec(dllexport) double Stitcher_workScale_0(void* self);
extern "C" __declspec(dllexport) void WarperCreator_Delete(void* self);
extern "C" __declspec(dllexport) void detail_AffineBasedEstimator_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_AffineBasedEstimator_New_0();
extern "C" __declspec(dllexport) void detail_AffineBestOf2NearestMatcher_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_AffineBestOf2NearestMatcher_New_0(bool full_affine, bool try_use_gpu, float match_conf, int num_matches_thresh1);
extern "C" __declspec(dllexport) void detail_BestOf2NearestMatcher_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_BestOf2NearestMatcher_New_0(bool try_use_gpu, float match_conf, int num_matches_thresh1, int num_matches_thresh2, double matches_confidence_thresh);
extern "C" __declspec(dllexport) void detail_BestOf2NearestMatcher_collectGarbage_0(void* self);
extern "C" __declspec(dllexport) void* detail_BestOf2NearestMatcher_create_0(bool try_use_gpu, float match_conf, int num_matches_thresh1, int num_matches_thresh2, double matches_confidence_thresh);
extern "C" __declspec(dllexport) void detail_BestOf2NearestRangeMatcher_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_BestOf2NearestRangeMatcher_New_0(int range_width, bool try_use_gpu, float match_conf, int num_matches_thresh1, int num_matches_thresh2);
extern "C" __declspec(dllexport) void detail_Blender_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_Blender_createDefault_0(int type, bool try_gpu);
extern "C" __declspec(dllexport) void detail_Blender_prepare_0(void* self, void* corners, void* sizes);
extern "C" __declspec(dllexport) void detail_Blender_prepare_1(void* self, cv::Rect dst_roi);
extern "C" __declspec(dllexport) void detail_Blender_feed_0(void* self, void* img, void* mask, cv::Point tl);
extern "C" __declspec(dllexport) void detail_Blender_blend_0(void* self, void* dst, void* dst_mask);
extern "C" __declspec(dllexport) void detail_BlocksChannelsCompensator_Delete(void* self);
extern "C" __declspec(dllexport) void* detail_BlocksChannelsCompensator_New_0(int bl_width, int bl_height, int nr_feeds);
extern "C" __declspec(dllexport) void detail_BlocksCompensator_Delete(void* self);
extern "C" __declspec(dllexport) void detail_BlocksCompensator_apply_0(void* self, int index, cv::Point corner, void* image, void* mask);
extern "C" __declspec(dllexport) void detail_BlocksCompensator_getMatGains_0(void* self, void* umv);
extern "C" __declspec(dllexport) void detail_BlocksCompensator_setMatGains_0(void* self, void* umv);
extern "C" __declspec(dllexport) void detail_BlocksCompensator_setNrFeeds_0(void* self, int nr_feeds);
extern "C" __declspec(dllexport) int detail_BlocksCompensator_getNrFeeds_0(void* self);