src/OpenCV5Sharp/Generated/NativeMethods.Stitching.cs


namespace OpenCV5Sharp
{
    internal static partial class NativeMethods
    {
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void PyRotationWarper_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr PyRotationWarper_New_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? type, float scale);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr PyRotationWarper_New_1();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Point2F PyRotationWarper_warpPoint_0(PyRotationWarperHandle self, Point2F pt, MatHandle K, MatHandle R);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Point2F PyRotationWarper_warpPointBackward_0(PyRotationWarperHandle self, Point2F pt, MatHandle K, MatHandle R);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Rect PyRotationWarper_buildMaps_0(PyRotationWarperHandle self, Size src_size, MatHandle K, MatHandle R, MatHandle xmap, MatHandle ymap);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Point PyRotationWarper_warp_0(PyRotationWarperHandle self, MatHandle src, MatHandle K, MatHandle R, int interp_mode, int border_mode, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void PyRotationWarper_warpBackward_0(PyRotationWarperHandle self, MatHandle src, MatHandle K, MatHandle R, int interp_mode, int border_mode, Size dst_size, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Rect PyRotationWarper_warpRoi_0(PyRotationWarperHandle self, Size src_size, MatHandle K, MatHandle R);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float PyRotationWarper_getScale_0(PyRotationWarperHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void PyRotationWarper_setScale_0(PyRotationWarperHandle self, float arg1);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Stitcher_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Stitcher_create_0(int mode);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double Stitcher_registrationResol_0(StitcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Stitcher_setRegistrationResol_0(StitcherHandle self, double resol_mpx);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double Stitcher_seamEstimationResol_0(StitcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Stitcher_setSeamEstimationResol_0(StitcherHandle self, double resol_mpx);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double Stitcher_compositingResol_0(StitcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Stitcher_setCompositingResol_0(StitcherHandle self, double resol_mpx);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double Stitcher_panoConfidenceThresh_0(StitcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Stitcher_setPanoConfidenceThresh_0(StitcherHandle self, double conf_thresh);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool Stitcher_waveCorrection_0(StitcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Stitcher_setWaveCorrection_0(StitcherHandle self, [MarshalAs(UnmanagedType.U1)] bool flag);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Stitcher_interpolationFlags_0(StitcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Stitcher_setInterpolationFlags_0(StitcherHandle self, int interp_flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Stitcher_estimateTransform_0(StitcherHandle self, IntPtr images, IntPtr masks);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Stitcher_composePanorama_0(StitcherHandle self, MatHandle pano);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Stitcher_composePanorama_1(StitcherHandle self, IntPtr images, MatHandle pano);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Stitcher_stitch_0(StitcherHandle self, IntPtr images, MatHandle pano);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Stitcher_stitch_1(StitcherHandle self, IntPtr images, IntPtr masks, MatHandle pano);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Stitcher_component_0(StitcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Stitcher_cameras_0(StitcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double Stitcher_workScale_0(StitcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void WarperCreator_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_AffineBasedEstimator_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_AffineBasedEstimator_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_AffineBestOf2NearestMatcher_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_AffineBestOf2NearestMatcher_New_0([MarshalAs(UnmanagedType.U1)] bool full_affine, [MarshalAs(UnmanagedType.U1)] bool try_use_gpu, float match_conf, int num_matches_thresh1);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BestOf2NearestMatcher_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_BestOf2NearestMatcher_New_0([MarshalAs(UnmanagedType.U1)] bool try_use_gpu, float match_conf, int num_matches_thresh1, int num_matches_thresh2, double matches_confidence_thresh);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BestOf2NearestMatcher_collectGarbage_0(DetailBestOf2NearestMatcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_BestOf2NearestMatcher_create_0([MarshalAs(UnmanagedType.U1)] bool try_use_gpu, float match_conf, int num_matches_thresh1, int num_matches_thresh2, double matches_confidence_thresh);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BestOf2NearestRangeMatcher_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_BestOf2NearestRangeMatcher_New_0(int range_width, [MarshalAs(UnmanagedType.U1)] bool try_use_gpu, float match_conf, int num_matches_thresh1, int num_matches_thresh2);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_Blender_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_Blender_createDefault_0(int type, [MarshalAs(UnmanagedType.U1)] bool try_gpu);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_Blender_prepare_0(DetailBlenderHandle self, IntPtr corners, IntPtr sizes);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_Blender_prepare_1(DetailBlenderHandle self, Rect dst_roi);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_Blender_feed_0(DetailBlenderHandle self, MatHandle img, MatHandle mask, Point tl);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_Blender_blend_0(DetailBlenderHandle self, MatHandle dst, MatHandle dst_mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BlocksChannelsCompensator_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr detail_BlocksChannelsCompensator_New_0(int bl_width, int bl_height, int nr_feeds);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BlocksCompensator_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BlocksCompensator_apply_0(DetailBlocksCompensatorHandle self, int index, Point corner, MatHandle image, MatHandle mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BlocksCompensator_getMatGains_0(DetailBlocksCompensatorHandle self, IntPtr umv);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BlocksCompensator_setMatGains_0(DetailBlocksCompensatorHandle self, IntPtr umv);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void detail_BlocksCompensator_setNrFeeds_0(DetailBlocksCompensatorHandle self, int nr_feeds);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int detail_BlocksCompensator_getNrFeeds_0(DetailBlocksCompensatorHandle self);
